Fix aspect ratio on mobile

--- a/src/pages/Relax/FaceTime/FaceTime.css
+++ b/src/pages/Relax/FaceTime/FaceTime.css
@@ -3,7 +3,6 @@
 }
 
 video {
-  width: 100%;
   aspect-ratio: 16 / 9;
 }
 
@@ -79,5 +78,11 @@ video {
 @media screen and (max-width: 1052px) {
   .room {
     grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  video {
+    aspect-ratio: 4 / 5;
   }
 }
